# photohead

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cad/: bearing_636_2rs.FCStd  stepper_motor_nema_17.FCStd  timing_pulley_gt2_20teeth_bore5.FCStd
doc/: application_build_and_run.md  requirements.md  soft_application_build_and_run.md  soft_miscellaneous.md  soft_requirements.md
elec/: .gitignore  README.md
elec/cad/: fp-lib-table  photohead-elec.kicad_pcb  photohead-elec.kicad_prl  photohead-elec.kicad_pro  photohead-elec.kicad_sch  photohead-elec.kicad_sym  photohead-elec.net  sym-lib-table
elec/cad/gerbers/: photohead-elec-B_Cu.gbl  photohead-elec-B_Mask.gbs  photohead-elec-B_Silkscreen.gbo  photohead-elec-Edge_Cuts.gm1  photohead-elec-F_Cu.gtl  photohead-elec-F_Mask.gts  photohead-elec-F_Silkscreen.gto  photohead-elec-NPTH.drl  photohead-elec-PTH.drl  photohead-elec-job.gbrjob
elec/cad/photo-elec.pretty/: TMC2208_v2.0_MKS_sockets.kicad_mod
include/: camera.h  camera_exceptions.h
mech/: README.md
mech/cad/: bearing_608_2rs.FCStd  benro-tripod-mount.FCStd  camera_mount.FCStd  head_inner_side_bracket.FCStd  head_inner_side_bracket.stl  head_outer_bracket.FCStd  head_outer_bracket.stl  platform.FCStd  platform.stl  timing_pulley_gt2_60teeth_bore6.FCStd
soft/: .gitignore  CMakeLists.txt  README.md
soft/src/: camera.h  main.cpp  object_detection.cpp
soft/src/pwm/: CMakeLists.txt  config.h.in  main.cpp  pwm.cpp  pwm.h
software/: bridge.py  serial_client.py
src/: camera.cpp  camera.h  config.h.in  main.cpp  object_detection.cpp  object_detection.h
